[package]
name = "teledustry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
getopts = "0.2"
strip-ansi-escapes = "0.1"
tgbot = "0.14"
tokio = { version = "1.11", features = ["rt-multi-thread", "macros", "process", "io-util"] }
